feat: update html and css files cv#3

--- a/index.html
+++ b/index.html
@@ -1,63 +1,62 @@
-<!--<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    <h1 class="myStyle1">Hello World!</h1>
-    <h1>jikioiiuiui</h1>
-</body>
-</html>
--->
 
 <!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Заголовок страницы</title>
-    <link rel="stylesheet" href="./styles/style.css">
-
-    <meta property="og:title" content="Заголовок страницы в OG">
-    <meta property="og:description" content="Описание страницы в OG">
-    <meta property="og:image" content="https://example.com/image.jpg">
-    <meta property="og:url" content="https://example.com/">
+    <title>Резюме Алексеева Андрея</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <header>
-      <h1>Личный сайт</h1>
-      <p>Который сделан на основе готового шаблона</p>
       <nav>
-        <ul>
-          <li><a href="index.html">Эта страница</a></li>
-          <li><a href="catalog.html">Другая страница</a></li>
-        </ul>
+        <div class = "centre" style="background-color: greenyellow; height: 50px; justify-content: center; display: flex;">
+          <p>My summary</p>
+        </div>  
       </nav>
     </header>
+
     <main>
-      <article>
-        <section>
-          <h2>Первая секция</h2>
-          <p>Она обо мне</p>
-          <img src="images/image.png" alt="Человек и пароход">
-          <p>Но может быть и о семантике, я пока не решил.</p>
-        </section>
-        <section>
-          <h2>Вторая секция</h2>
-          <p>Она тоже обо мне</p>
-        </section>
-        <section>
-          <h2>И третья</h2>
-          <p>Вы уже должны были начать догадываться.</p>
-        </section>
-      </article>
+      <h1 class = "centre">Andrey Aliakseyeu</h1>
+      <div class="div_center">
+        <table style="margin: 0 auto;">
+          <tr>
+            <td>
+              <h2>About me:</h2>
+              <p>Hello,my name is Andrrew. I am 15 y.o. teenager</p>
+              <p>I finished 9 class in this year and I want to learn programming, that is why I am here</p>
+              <p>I like swimming, computer games and tennis</p>
+            </td>
+            <td>
+              <div class="" >
+                <img src = "./images/myself.jpg" alt="My photo">
+              </div>
+            </td>
+            <td>
+              <h2>My skills:</h2>
+              <ul>
+                <li>studying English(B1 right now)</li>
+                <li>studying Maths</li>
+                <li>studying JS</li>
+              </ul>
+            </td>
+          </tr>
+        </table>
+      </div>
     </main>
+
     <footer>
-      <p>Сюда бы я вписал информацию об авторе и ссылки на другие сайты</p>
+      <div class = "right" style="background-color: greenyellow; height: 185px; justify-content: center; display: flex;">
+        <table>
+          <tr>
+            <th>Email:andrewal123534@gmail.com</th>
+            <th>Adress: Minsk, Belarus</th>
+            <th>Github:<a href = "https://github.com/JUSTNOFEAR">https://github.com/JUSTNOFEAR</a></th>
+            <th>Course:<a href = "https://app.rs.school/course/stats?course=js-fe-preschool-2024q2">https://app.rs.school/course/stats?course=js-fe-preschool-2024q2</a></th>
+          </tr>
+      </div>
     </footer>
-    <!-- сюда можно подключить jquery <script src="scripts/app.js" defer></script> -->
+
+
   </body>
 </html>
