feat: create header

--- a/shelter/main 1280.html
+++ b/shelter/main 1280.html
@@ -7,16 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <div class = "head_block">
-            <div class = "flex_head">
-                <div class = "flex_elements">
-                    <p class = "text" style = "size: 32px; line-height: 35.2px;">Cozy House</p>
-                    <p class = "standart_font_h">Shelter for pets in Boston</p>
-                </div>     
+    <div class = "start_background">
+        <header class = "head_nav_lay">
+            <div class = "logo_flex">
+                <div class = "logo_title">Cozy House</div>
+                <div class = "logo_subtitle">Shelter for pets in Boston</div>
             </div>
+            <div class = "nav_menu">
+                <a class = "menu_options_first" href "@">About the shelter</a>
+                <a class = "menu_options" href "@">Our pets</a>
+                <a class = "menu_options" href "@">Help the shelter</a>
+                <a class = "menu_options" href "@">Contacts</a>
+            </div>
+        </header>
+        <div class = "start_screen">
         </div>
-    </header>
+    </div>
     <main></main>
     <footer></footer>
 </body>
