--- a/shelter/main 1280.html
+++ b/shelter/main 1280.html
@@ -21,9 +21,31 @@
             </div>
         </header>
         <div class = "start_screen">
+            <div class = "start_screen_text">
+                <h2 class = "heading_ssc">Not only people <br>need a house</h2>
+                <p class = "subheading_ssc">We offer to give a chance to a little and nice puppy with an extremely wide and open heart.
+                     He or she will love you more than anybody else in the world, you will see!</p>
+                <button class = "button_primary">Make a friend</button>
+            </div>
+            <img src="./images/start-screen-puppy.png">
         </div>
     </div>
-    <main></main>
+    <main>
+        <div class = "about">
+            <div class="about_content">
+                <img src="./images/about_pets.png">
+                <div class = "content">
+                    <h3 class = "heading_about">About the shelter “Cozy House”</h3>
+                    <p class = "subheading_about">Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family.
+                         The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</p>
+                    <p class="subheading_about">We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well.
+                         We are supported by 87 volunteers and 28 employees of various skill levels.
+                         About 12% of the animals are taken by the shelter staff. Taking care of the animals,
+                          they become attached to the pets and would hardly ever leave them alone.</p>
+                </div>
+            </div>
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
