--- a/shelter/main 1280.html
+++ b/shelter/main 1280.html
@@ -20,30 +20,67 @@
                 <a class = "menu_options" href "@">Contacts</a>
             </div>
         </header>
-        <div class = "start_screen">
-            <div class = "start_screen_text">
-                <h2 class = "heading_ssc">Not only people <br>need a house</h2>
-                <p class = "subheading_ssc">We offer to give a chance to a little and nice puppy with an extremely wide and open heart.
+        <div class="start_screen_content">
+            <div class="content">
+                <h2 class="ssc_heading">Not only people need a house</h2>
+                <p class="ssc_subheading">We offer to give a chance to a little and nice puppy with an extremely wide and open heart.
                      He or she will love you more than anybody else in the world, you will see!</p>
-                <button class = "button_primary">Make a friend</button>
+                <button class="ssc_button">Make a friend</button>
             </div>
-            <img src="./images/start-screen-puppy.png">
+            <div class="picture_dog">
+                <img src="./images/start-screen-puppy.png">
+            </div>
         </div>
     </div>
     <main>
         <div class = "about">
-            <div class="about_content">
-                <img src="./images/about_pets.png">
-                <div class = "content">
-                    <h3 class = "heading_about">About the shelter <br>“Cozy House”</h3>
-                    <p  class = "subheading_about">Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family.
+            <div class = "about_content">
+                <div class = "about_pets">
+                    <img src="./images/about_pets.png">
+                </div>
+                <div class="content_txt">
+                    <h3 class = "ab_heading">About the shelter “Cozy House”</h3>
+                    <p class = "ab_subheading">Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family.
                          The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</p>
-                    <p  class="subheading_about">We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well.
-                         We are supported by 87 volunteers and 28 employees of various skill levels.
-                         About 12% of the animals are taken by the shelter staff. Taking care of the animals,
-                          they become attached to the pets and would hardly ever leave them alone.</p>
+                    <p class = "ab_subheading">We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well.
+                         We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff.
+                          Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.</p>
                 </div>
             </div>
+        </div>
+
+        <div class="pets">
+            <div class="pets_content">
+                <h3 class="pets_heading">Our friends who <br>are looking for a house</h3>
+                <div class = "slider">
+
+                    <button class = "button_arrow">&#8592;</button>
+
+                    <div class="card">
+                        <img src="./images/card_1_cat.png">
+                        <div class="animal_names">Katrine</div>
+                        <button class="animal_buttons">Learn more</button>
+                    </div>
+
+                    <div class="card">
+                        <img src="./images/card_2_dog.png">
+                        <div class="animal_names">Jennifer</div>
+                        <button class="animal_buttons">Learn more</button>
+                    </div>
+
+                    <div class="card">
+                        <img src="./images/card_3_dog.png">
+                        <div class="animal_names">Woody</div>
+                        <button class="animal_buttons">Learn more</button>
+                    </div>
+                    
+                    <button class = "button_arrow">&#8594;</button>
+
+                </div>
+
+                <button class = "button_primary">Get to know the rest</button>
+            </div>
+
         </div>
     </main>
     <footer></footer>
