--- a/shelter/main 1280.html
+++ b/shelter/main 1280.html
@@ -82,7 +82,97 @@
             </div>
 
         </div>
+
+        <div class = "help">
+            <div class="help_content">
+                <h3 class="help_title">How you can help our shelter</h3>
+                <div class="help_list">
+                    <div class="help_container">
+                        <img src="./images/vector.png">
+                        <h4 class="list_names">Pet food</h4>
+                    </div>
+                    <div class="help_container">
+                        <img src="./images/transportation.png">
+                        <h4 class="list_names">Transportation</h4>
+                    </div>
+                    <div class="help_container">
+                        <img src="./images/icon-toys.png">
+                        <h4 class="list_names">Toys</h4>
+                    </div>
+                    <div class="help_container">
+                        <img src="./images/icon-bowls-and-cups.png">
+                        <h4 class="list_names">Bowls and cups</h4>
+                    </div>
+                    <div class="help_container">
+                        <img src="./images/icon-shampoos.png">
+                        <h4 class="list_names">Shampoos</h4>
+                    </div>
+                    <div class="help_container">
+                        <img src="./images/icon-vitamins.png">
+                        <h4 class="list_names">Vitamins</h4>
+                    </div>
+                    <div class="help_container">
+                        <img src="./images/icon-medicines.png">
+                        <h4 class="list_names">Medicines</h4>
+                    </div>
+                    <div class="help_container">
+                        <img src="./images/collars-or-leashes.png">
+                        <h4 class="list_names">Collars / leashes</h4>
+                    </div>
+                    <div class="help_container">
+                        <img src="./images/icon-sleeping-area.png">
+                        <h4 class="list_names">Sleeping areas</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="donation">
+            <div class="donation_content">
+                <div class="donation_dog">
+                    <img src="./images/donation_dog.png">
+                </div>
+                <div class="content_inf">
+                    <h3 class="help_heading">You can also make a donation</h3>
+                    <h5 class="help_subheading">Name of the bank / Type of bank account</h5>
+                    <div class="card_number">
+                        <img src="./images/credit-card.png">
+                        <h4 class="card_num_txt">8380 2880 8028 8791 7435</h4>
+                    </div>
+                    <p class="donation_inf">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                         Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate.
+                          Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                </div>
+            </div>
+        </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer_content">
+            <div class="footer_contacts">
+                <h3 class="footer_heading">For questions and suggestions</h3>
+                <div class="footer_string">
+                    <img src="./images/icon-email.png">
+                    <h4 class="footer_info">email@shelter.com</h4>
+                </div>
+                <div class="footer_string">
+                    <img src="./images/phone.png">
+                    <h4 class="footer_info">+13 674 567 75 54</h4>
+                </div>
+            </div>
+            <div style="width: 302px;" class="footer_contacts">
+                <h3 class="footer_heading">We are waiting for your visit</h3>
+                <div class="footer_string">
+                    <img src="./images/pin.png">
+                    <h4 class="footer_info">1 Central Street, Boston (entrance from the store)</h4>
+                </div>
+                <div class="footer_string">
+                    <img src="./images/pin.png">
+                    <h4 class="footer_info">18 South Park, London </h4>
+                </div>
+            </div>
+            <div class="footer_picture">
+                <img src="./images/footer_dog.png">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
