did links and buttons

--- a/shelter/our_pets1280.html
+++ b/shelter/our_pets1280.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <header class = "header_container">
-        <div class="head_nav_lay">
+        <div class="head_nav_lay_our">
             <div class = "logo_flex">
-                <div class = "logo_title_pets">Cozy House</div>
+                <a href= "main_1280.html" class = "logo_title_pets">Cozy House</a>
                 <div class = "logo_subtitle_pets">Shelter for pets in Boston</div>
             </div>
             <div class = "nav_menu">
-                <a class = "menu_options_pets" href "@">About the shelter</a>
-                <a class = "menu_options_second" href "@">Our pets</a>
-                <a class = "menu_options_pets" href "@">Help the shelter</a>
-                <a class = "menu_options_pets" href "@">Contacts</a>
+                <a class = "menu_options_pets" href = "main_1280.html">About the shelter</a>
+                <a class = "menu_options_second" href  = "">Our pets</a>
+                <a class = "menu_options_pets" href  = "main_1280.html#help">Help the shelter</a>
+                <a class = "menu_options_pets" href = "#contacts">Contacts</a>
             </div>
         </div>
     </header>
@@ -78,7 +78,7 @@
         </div>
     </main>
     <footer>
-        <div class="footer_content">
+        <div id="contacts" class="footer_content">
             <div class="footer_contacts">
                 <h3 class="footer_heading">For questions and suggestions</h3>
                 <div class="footer_string">
