--- a/shelter/main_1280.html
+++ b/shelter/main_1280.html
@@ -10,14 +10,14 @@
     <div class = "start_background">
         <header class = "head_nav_lay">
             <div class = "logo_flex">
-                <div class = "logo_title">Cozy House</div>
+                <a  href = "" class = "logo_title">Cozy House</a>
                 <div class = "logo_subtitle">Shelter for pets in Boston</div>
             </div>
             <div class = "nav_menu">
-                <a class = "menu_options_first" href "@">About the shelter</a>
-                <a class = "menu_options" href "@">Our pets</a>
-                <a class = "menu_options" href "@">Help the shelter</a>
-                <a class = "menu_options" href "@">Contacts</a>
+                <a class = "menu_options_first" href = "">About the shelter</a>
+                <a class = "menu_options" href = "our_pets1280.html">Our pets</a>
+                <a class = "menu_options" href = "#help">Help the shelter</a>
+                <a class = "menu_options" href = "#contacts">Contacts</a>
             </div>
         </header>
         <div class="start_screen_content">
@@ -25,7 +25,7 @@
                 <h2 class="ssc_heading">Not only people need a house</h2>
                 <p class="ssc_subheading">We offer to give a chance to a little and nice puppy with an extremely wide and open heart.
                      He or she will love you more than anybody else in the world, you will see!</p>
-                <button class="ssc_button">Make a friend</button>
+                <button onclick= "document.location = '#our_friends'" class="ssc_button">Make a friend</button>
             </div>
             <div class="picture_dog">
                 <img src="./images/start-screen-puppy.png">
@@ -49,7 +49,7 @@
             </div>
         </div>
 
-        <div class="pets">
+        <div id = "our_friends" class="pets">
             <div class="pets_content">
                 <h3 class="pets_heading">Our friends who <br>are looking for a house</h3>
                 <div class = "slider">
@@ -78,12 +78,12 @@
 
                 </div>
 
-                <button class = "button_primary">Get to know the rest</button>
+                <button onclick= "document.location = 'our_pets1280.html'" class = "button_primary">Get to know the rest</button>
             </div>
 
         </div>
 
-        <div class = "help">
+        <div id="help" class = "help">
             <div class="help_content">
                 <h3 class="help_title">How you can help our shelter</h3>
                 <div class="help_list">
@@ -146,7 +146,7 @@
         </div>
     </main>
     <footer>
-        <div class="footer_content">
+        <div id="contacts" class="footer_content">
             <div class="footer_contacts">
                 <h3 class="footer_heading">For questions and suggestions</h3>
                 <div class="footer_string">
