--- a/shelter/main_1280.html
+++ b/shelter/main_1280.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css"></linkrel>
     <title>Document</title>
+    <link rel="icon" href="./images/favicon.png" type="image/x-icon">
+    <script type="text/javascript" async="" src="./index.js"></script>
+    
 </head>
 <body>
     <div class = "start_background">
@@ -20,9 +23,9 @@
                 <a class = "menu_options" href = "#contacts">Contacts</a>
             </div>
         </header>
-        <div class="start_screen_content">
+        <div class="not_only">
             <div class="content">
-                <h2 class="ssc_heading">Not only people need a house</h2>
+                <h1 class="ssc_heading">Not only people need a house</h1>
                 <p class="ssc_subheading">We offer to give a chance to a little and nice puppy with an extremely wide and open heart.
                      He or she will love you more than anybody else in the world, you will see!</p>
                 <button onclick= "document.location = '#our_friends'" class="ssc_button">Make a friend</button>
@@ -126,7 +129,7 @@
                 </div>
             </div>
         </div>
-        <div class="donation">
+        <div class="in_addiction">
             <div class="donation_content">
                 <div class="donation_dog">
                     <img src="./images/donation_dog.png">
@@ -136,7 +139,7 @@
                     <h5 class="help_subheading">Name of the bank / Type of bank account</h5>
                     <div class="card_number">
                         <img src="./images/credit-card.png">
-                        <h4 class="card_num_txt">8380 2880 8028 8791 7435</h4>
+                        <a href=" " class="card_num_txt">8380 2880 8028 8791 7435</a>
                     </div>
                     <p class="donation_inf">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit.
                          Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate.
@@ -150,23 +153,31 @@
             <div class="footer_contacts">
                 <h3 class="footer_heading">For questions and suggestions</h3>
                 <div class="footer_string">
-                    <img src="./images/icon-email.png">
-                    <h4 class="footer_info">email@shelter.com</h4>
+                    <a href="https://www.google.com/intl/ru/gmail/about/">
+                        <img src="./images/icon-email.png">
+                    </a>    
+                    <a href="https://www.google.com/intl/ru/gmail/about/" class="footer_info">email@shelter.com</a>
                 </div>
                 <div class="footer_string">
-                    <img src="./images/phone.png">
-                    <h4 class="footer_info">+13 674 567 75 54</h4>
+                    <a href="tel:+136745677554">
+                        <img src="./images/phone.png">
+                    </a>
+                    <a href="tel:+136745677554" class="footer_info">+13 674 567 75 54</a>
                 </div>
             </div>
             <div style="width: 302px;" class="footer_contacts">
                 <h3 class="footer_heading">We are waiting for your visit</h3>
                 <div class="footer_string">
-                    <img src="./images/pin.png">
-                    <h4 class="footer_info">1 Central Street, Boston (entrance from the store)</h4>
+                    <a href="https://www.google.com/maps/@53.9532339,27.4091284,15z?entry=ttu" target="_blank">
+                        <img src="./images/pin.png">
+                    </a>
+                    <a href="https://www.google.com/maps/@53.9532339,27.4091284,15z?entry=ttu" target="_blank" class="footer_info">1 Central Street, Boston (entrance from the store)</a>
                 </div>
                 <div class="footer_string">
-                    <img src="./images/pin.png">
-                    <h4 class="footer_info">18 South Park, London </h4>
+                    <a href="https://www.google.com/maps/@53.9532339,27.4091284,15z?entry=ttu" target="_blank">
+                        <img src="./images/pin.png">
+                    </a>
+                    <a href="https://www.google.com/maps/@53.9532339,27.4091284,15z?entry=ttu" target="_blank" class="footer_info">18 South Park, London </a>
                 </div>
             </div>
             <div class="footer_picture">
