--- a/shelter/our_pets1280.html
+++ b/shelter/our_pets1280.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css"></linkrel>
+    <link rel="icon" href="./images/favicon.png" type="image/x-icon">
     <title>Document</title>
 </head>
 <body>
@@ -22,9 +23,9 @@
         </div>
     </header>
     <main>
-        <div class="pets_our">
+        <div class="our_friends">
             <div class="our_pets_content">
-                <h3 class="our_pets_heading">Our friends who <br>are looking for a house</h3>
+                <h1 class="our_pets_heading">Our friends who <br>are looking for a house</h1>
                 <div class="cards_container">
                     <div class="card">
                         <img src="./images/card_1_cat.png">
@@ -68,11 +69,11 @@
                     </div>
                 </div>
                 <div class="navigation">
-                    <button style="border-color: #CDCDCD; background-color: #FFFFFF; color: #CDCDCD;" class = "button_arrow">&#x3C;&#x3C;</button>
-                    <button style="border-color: #CDCDCD; background-color: #FFFFFF; color: #CDCDCD;" class = "button_arrow">&#x3C;</button>
-                    <button style="border-color: #F1CDB3; background-color: #F1CDB3; color: #000000;" class = "button_arrow">1</button>
-                    <button style="border-color: #F1CDB3; background-color: #FFFFFF; color: #000000;" class = "button_arrow">&#x3E;</button>
-                    <button style="border-color: #F1CDB3; background-color: #FFFFFF; color: #000000;" class = "button_arrow">&#x3E;&#x3E;</button>
+                    <button style="border-color: #CDCDCD; color: #CDCDCD;" class = "nav_buttons">&#x3C;&#x3C;</button>
+                    <button style="border-color: #CDCDCD; color: #CDCDCD;" class = "nav_buttons">&#x3C;</button>
+                    <button style="border-color: #F1CDB3; background-color: #F1CDB3; color: #000000;" class = "nav_buttons">1</button>
+                    <button style="border-color: #F1CDB3; color: #000000;" class = "nav_buttons">&#x3E;</button>
+                    <button style="border-color: #F1CDB3; color: #000000;" class = "nav_buttons">&#x3E;&#x3E;</button>
                 </div>
             </div>
         </div>
@@ -82,23 +83,31 @@
             <div class="footer_contacts">
                 <h3 class="footer_heading">For questions and suggestions</h3>
                 <div class="footer_string">
-                    <img src="./images/icon-email.png">
-                    <h4 class="footer_info">email@shelter.com</h4>
+                    <a href="https://www.google.com/intl/ru/gmail/about/">
+                        <img src="./images/icon-email.png">
+                    </a>    
+                    <a href="https://www.google.com/intl/ru/gmail/about/" class="footer_info">email@shelter.com</a>
                 </div>
                 <div class="footer_string">
-                    <img src="./images/phone.png">
-                    <h4 class="footer_info">+13 674 567 75 54</h4>
+                    <a href="tel:+136745677554">
+                        <img src="./images/phone.png">
+                    </a>
+                    <a href="tel:+136745677554" class="footer_info">+13 674 567 75 54</a>
                 </div>
             </div>
             <div style="width: 302px;" class="footer_contacts">
                 <h3 class="footer_heading">We are waiting for your visit</h3>
                 <div class="footer_string">
-                    <img src="./images/pin.png">
-                    <h4 class="footer_info">1 Central Street, Boston (entrance from the store)</h4>
+                    <a href="https://www.google.com/maps/@53.9532339,27.4091284,15z?entry=ttu" target="_blank">
+                        <img src="./images/pin.png">
+                    </a>
+                    <a href="https://www.google.com/maps/@53.9532339,27.4091284,15z?entry=ttu" target="_blank" class="footer_info">1 Central Street, Boston (entrance from the store)</a>
                 </div>
                 <div class="footer_string">
-                    <img src="./images/pin.png">
-                    <h4 class="footer_info">18 South Park, London </h4>
+                    <a href="https://www.google.com/maps/@53.9532339,27.4091284,15z?entry=ttu" target="_blank">
+                        <img src="./images/pin.png">
+                    </a>
+                    <a href="https://www.google.com/maps/@53.9532339,27.4091284,15z?entry=ttu" target="_blank" class="footer_info">18 South Park, London </a>
                 </div>
             </div>
             <div class="footer_picture">
