feat: finish 1280 pages

--- a/shelter/main_1280.html
+++ b/shelter/main_1280.html
@@ -13,8 +13,10 @@
     <div class = "start_background">
         <header class = "head_nav_lay">
             <div class = "logo_flex">
-                <a  href = "" class = "logo_title">Cozy House</a>
-                <div class = "logo_subtitle">Shelter for pets in Boston</div>
+                <a class="logo_link" href="">
+                    <div class = "logo_title">Cozy House</div>
+                    <div class = "logo_subtitle">Shelter for pets in Boston</div>
+                </a>    
             </div>
             <div class = "nav_menu">
                 <a class = "menu_options_first" href = "">About the shelter</a>
@@ -25,13 +27,13 @@
         </header>
         <div class="not_only">
             <div class="content">
-                <h1 class="ssc_heading">Not only people need a house</h1>
-                <p class="ssc_subheading">We offer to give a chance to a little and nice puppy with an extremely wide and open heart.
-                     He or she will love you more than anybody else in the world, you will see!</p>
+                <h1 class="ssc_heading">Not only people <br>need a house</h1>
+                <p class="ssc_subheading">We offer to give a chance to a little and nice puppy with an extremely <br>wide and open heart.
+                     He or she will love you more than anybody else <br>in the world, you will see!</p>
                 <button onclick= "document.location = '#our_friends'" class="ssc_button">Make a friend</button>
             </div>
             <div class="picture_dog">
-                <img src="./images/start-screen-puppy.png">
+                <img src="./images/start-screen-puppy.png" alt="picture">
             </div>
         </div>
     </div>
@@ -39,15 +41,15 @@
         <div class = "about">
             <div class = "about_content">
                 <div class = "about_pets">
-                    <img src="./images/about_pets.png">
+                    <img src="./images/about_pets.png" alt="picture">
                 </div>
                 <div class="content_txt">
-                    <h3 class = "ab_heading">About the shelter “Cozy House”</h3>
-                    <p class = "ab_subheading">Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family.
-                         The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</p>
-                    <p class = "ab_subheading">We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well.
-                         We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff.
-                          Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.</p>
+                    <h3 class = "ab_heading">About the shelter <br>“Cozy House”</h3>
+                    <p class = "ab_subheading">Currently we have 121 dogs and 342 cats on our hands and <br>statistics show that only 20% of them will find a family.
+                         The <br>others will continue to live with us and will be waiting for a lucky <br>chance to become dearly loved.</p>
+                    <p class = "ab_subheading">We feed our wards with the best food and make sure that they <br>do not get sick, feel comfortable (including psychologically) and <br>well.
+                         We are supported by 87 volunteers and 28 employees of <br>various skill levels. About 12% of the animals are taken by the <br>shelter staff.
+                          Taking care of the animals, they become attached <br>to the pets and would hardly ever leave them alone.</p>
                 </div>
             </div>
         </div>
@@ -58,25 +60,25 @@
                 <div class = "slider">
 
                     <button class = "button_arrow">&#8592;</button>
+                    <div class = "cards_box">
+                        <div class="card">
+                            <img src="./images/card_1_cat.png" alt="picture">
+                            <div class="animal_names">Katrine</div>
+                            <button class="animal_buttons">Learn more</button>
+                        </div>
 
-                    <div class="card">
-                        <img src="./images/card_1_cat.png">
-                        <div class="animal_names">Katrine</div>
-                        <button class="animal_buttons">Learn more</button>
-                    </div>
+                        <div class="card">
+                            <img src="./images/card_2_dog.png" alt="picture">
+                            <div class="animal_names">Jennifer</div>
+                            <button class="animal_buttons">Learn more</button>
+                        </div>
 
-                    <div class="card">
-                        <img src="./images/card_2_dog.png">
-                        <div class="animal_names">Jennifer</div>
-                        <button class="animal_buttons">Learn more</button>
+                        <div class="card">
+                            <img src="./images/card_3_dog.png" alt="picture">
+                            <div class="animal_names">Woody</div>
+                            <button class="animal_buttons">Learn more</button>
+                        </div>
                     </div>
-
-                    <div class="card">
-                        <img src="./images/card_3_dog.png">
-                        <div class="animal_names">Woody</div>
-                        <button class="animal_buttons">Learn more</button>
-                    </div>
-                    
                     <button class = "button_arrow">&#8594;</button>
 
                 </div>
@@ -88,42 +90,42 @@
 
         <div id="help" class = "help">
             <div class="help_content">
-                <h3 class="help_title">How you can help our shelter</h3>
+                <h3 class="help_title">How you can help <br>our shelter</h3>
                 <div class="help_list">
                     <div class="help_container">
-                        <img src="./images/vector.png">
+                        <img src="./images/vector.png" alt="picture">
                         <h4 class="list_names">Pet food</h4>
                     </div>
                     <div class="help_container">
-                        <img src="./images/transportation.png">
+                        <img src="./images/transportation.png" alt="picture">
                         <h4 class="list_names">Transportation</h4>
                     </div>
                     <div class="help_container">
-                        <img src="./images/icon-toys.png">
+                        <img src="./images/icon-toys.png" alt="picture">
                         <h4 class="list_names">Toys</h4>
                     </div>
                     <div class="help_container">
-                        <img src="./images/icon-bowls-and-cups.png">
+                        <img src="./images/icon-bowls-and-cups.png" alt="picture">
                         <h4 class="list_names">Bowls and cups</h4>
                     </div>
                     <div class="help_container">
-                        <img src="./images/icon-shampoos.png">
+                        <img src="./images/icon-shampoos.png" alt="picture">
                         <h4 class="list_names">Shampoos</h4>
                     </div>
                     <div class="help_container">
-                        <img src="./images/icon-vitamins.png">
+                        <img src="./images/icon-vitamins.png" alt="picture">
                         <h4 class="list_names">Vitamins</h4>
                     </div>
                     <div class="help_container">
-                        <img src="./images/icon-medicines.png">
+                        <img src="./images/icon-medicines.png" alt="picture">
                         <h4 class="list_names">Medicines</h4>
                     </div>
                     <div class="help_container">
-                        <img src="./images/collars-or-leashes.png">
+                        <img src="./images/collars-or-leashes.png" alt="picture">
                         <h4 class="list_names">Collars / leashes</h4>
                     </div>
                     <div class="help_container">
-                        <img src="./images/icon-sleeping-area.png">
+                        <img src="./images/icon-sleeping-area.png" alt="picture">
                         <h4 class="list_names">Sleeping areas</h4>
                     </div>
                 </div>
@@ -132,18 +134,18 @@
         <div class="in_addiction">
             <div class="donation_content">
                 <div class="donation_dog">
-                    <img src="./images/donation_dog.png">
+                    <img src="./images/donation_dog.png" alt="picture">
                 </div>
                 <div class="content_inf">
-                    <h3 class="help_heading">You can also make a donation</h3>
+                    <h3 class="help_heading">You can also <br>make a donation</h3>
                     <h5 class="help_subheading">Name of the bank / Type of bank account</h5>
                     <div class="card_number">
-                        <img src="./images/credit-card.png">
+                        <img src="./images/credit-card.png" alt="picture">
                         <a href=" " class="card_num_txt">8380 2880 8028 8791 7435</a>
                     </div>
-                    <p class="donation_inf">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate.
-                          Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                    <p class="donation_inf">Legal information and lorem ipsum dolor sit amet, consectetur <br>adipiscing elit.
+                         Maecenas a ipsum at libero sagittis dignissim sed ac <br>diam. Praesent ultrices maximus tortor et vulputate.
+                          Interdum et <br>malesuada fames ac ante ipsum primis in faucibus.</p>
                 </div>
             </div>
         </div>
@@ -154,13 +156,13 @@
                 <h3 class="footer_heading">For questions and suggestions</h3>
                 <div class="footer_string">
                     <a href="https://www.google.com/intl/ru/gmail/about/">
-                        <img src="./images/icon-email.png">
+                        <img src="./images/icon-email.png" alt="picture">
                     </a>    
                     <a href="https://www.google.com/intl/ru/gmail/about/" class="footer_info">email@shelter.com</a>
                 </div>
                 <div class="footer_string">
                     <a href="tel:+136745677554">
-                        <img src="./images/phone.png">
+                        <img src="./images/phone.png" alt="picture">
                     </a>
                     <a href="tel:+136745677554" class="footer_info">+13 674 567 75 54</a>
                 </div>
@@ -169,19 +171,19 @@
                 <h3 class="footer_heading">We are waiting for your visit</h3>
                 <div class="footer_string">
                     <a href="https://www.google.com/maps/@53.9532339,27.4091284,15z?entry=ttu" target="_blank">
-                        <img src="./images/pin.png">
+                        <img src="./images/pin.png" alt="picture">
                     </a>
                     <a href="https://www.google.com/maps/@53.9532339,27.4091284,15z?entry=ttu" target="_blank" class="footer_info">1 Central Street, Boston (entrance from the store)</a>
                 </div>
                 <div class="footer_string">
                     <a href="https://www.google.com/maps/@53.9532339,27.4091284,15z?entry=ttu" target="_blank">
-                        <img src="./images/pin.png">
+                        <img src="./images/pin.png" alt="picture">
                     </a>
                     <a href="https://www.google.com/maps/@53.9532339,27.4091284,15z?entry=ttu" target="_blank" class="footer_info">18 South Park, London </a>
                 </div>
             </div>
             <div class="footer_picture">
-                <img src="./images/footer_dog.png">
+                <img src="./images/footer-puppy.png" alt="picture">
             </div>
         </div>
     </footer>
