--- a/shelter/our_pets1280.html
+++ b/shelter/our_pets1280.html
@@ -11,8 +11,10 @@
     <header class = "header_container">
         <div class="head_nav_lay_our">
             <div class = "logo_flex">
-                <a href= "main_1280.html" class = "logo_title_pets">Cozy House</a>
-                <div class = "logo_subtitle_pets">Shelter for pets in Boston</div>
+                <a class="logo_link" href="main_1280.html">
+                    <div class = "logo_title_pets">Cozy House</div>
+                    <div class = "logo_subtitle_pets">Shelter for pets in Boston</div>
+                </a>    
             </div>
             <div class = "nav_menu">
                 <a class = "menu_options_pets" href = "main_1280.html">About the shelter</a>
@@ -28,42 +30,42 @@
                 <h1 class="our_pets_heading">Our friends who <br>are looking for a house</h1>
                 <div class="cards_container">
                     <div class="card">
-                        <img src="./images/card_1_cat.png">
+                        <img src="./images/card_1_cat.png" alt="picture">
                         <div class="animal_names">Katrine</div>
                         <button class="animal_buttons">Learn more</button>
                     </div>
                     <div class="card">
-                        <img src="./images/card_2_dog.png">
+                        <img src="./images/card_2_dog.png" alt="picture">
                         <div class="animal_names">Jennifer</div>
                         <button class="animal_buttons">Learn more</button>
                     </div>
                     <div class="card">
-                        <img src="./images/card_3_dog.png">
+                        <img src="./images/card_3_dog.png" alt="picture">
                         <div class="animal_names">Woody</div>
                         <button class="animal_buttons">Learn more</button>
                     </div>
                     <div class="card">
-                        <img src="./images/pets-sophia.png">
+                        <img src="./images/pets-sophia.png" alt="picture">
                         <div class="animal_names">Sophia</div>
                         <button class="animal_buttons">Learn more</button>
                     </div>
                     <div class="card">
-                        <img src="./images/pets-timmy.png">
+                        <img src="./images/pets-timmy.png" alt="picture">
                         <div class="animal_names">Timmy</div>
                         <button class="animal_buttons">Learn more</button>
                     </div>
                     <div class="card">
-                        <img src="./images/pets-charly.png">
+                        <img src="./images/pets-charly.png" alt="picture">
                         <div class="animal_names">Charly</div>
                         <button class="animal_buttons">Learn more</button>
                     </div>
                     <div class="card">
-                        <img src="./images/pets-scarlet.png">
+                        <img src="./images/pets-scarlet.png" alt="picture">
                         <div class="animal_names">Scarlett</div>
                         <button class="animal_buttons">Learn more</button>
                     </div>
                     <div class="card">
-                        <img src="./images/pets-freddie.png">
+                        <img src="./images/pets-freddie.png" alt="picture">
                         <div class="animal_names">Freddie</div>
                         <button class="animal_buttons">Learn more</button>
                     </div>
@@ -72,8 +74,8 @@
                     <button style="border-color: #CDCDCD; color: #CDCDCD;" class = "nav_buttons">&#x3C;&#x3C;</button>
                     <button style="border-color: #CDCDCD; color: #CDCDCD;" class = "nav_buttons">&#x3C;</button>
                     <button style="border-color: #F1CDB3; background-color: #F1CDB3; color: #000000;" class = "nav_buttons">1</button>
-                    <button style="border-color: #F1CDB3; color: #000000;" class = "nav_buttons">&#x3E;</button>
-                    <button style="border-color: #F1CDB3; color: #000000;" class = "nav_buttons">&#x3E;&#x3E;</button>
+                    <button class = "button_arrow">&#x3E;</button>
+                    <button class = "button_arrow">&#x3E;&#x3E;</button>
                 </div>
             </div>
         </div>
@@ -84,13 +86,13 @@
                 <h3 class="footer_heading">For questions and suggestions</h3>
                 <div class="footer_string">
                     <a href="https://www.google.com/intl/ru/gmail/about/">
-                        <img src="./images/icon-email.png">
+                        <img src="./images/icon-email.png" alt="picture">
                     </a>    
                     <a href="https://www.google.com/intl/ru/gmail/about/" class="footer_info">email@shelter.com</a>
                 </div>
                 <div class="footer_string">
                     <a href="tel:+136745677554">
-                        <img src="./images/phone.png">
+                        <img src="./images/phone.png" alt="picture">
                     </a>
                     <a href="tel:+136745677554" class="footer_info">+13 674 567 75 54</a>
                 </div>
@@ -99,19 +101,19 @@
                 <h3 class="footer_heading">We are waiting for your visit</h3>
                 <div class="footer_string">
                     <a href="https://www.google.com/maps/@53.9532339,27.4091284,15z?entry=ttu" target="_blank">
-                        <img src="./images/pin.png">
+                        <img src="./images/pin.png" alt="picture">
                     </a>
                     <a href="https://www.google.com/maps/@53.9532339,27.4091284,15z?entry=ttu" target="_blank" class="footer_info">1 Central Street, Boston (entrance from the store)</a>
                 </div>
                 <div class="footer_string">
                     <a href="https://www.google.com/maps/@53.9532339,27.4091284,15z?entry=ttu" target="_blank">
-                        <img src="./images/pin.png">
+                        <img src="./images/pin.png" alt="picture">
                     </a>
                     <a href="https://www.google.com/maps/@53.9532339,27.4091284,15z?entry=ttu" target="_blank" class="footer_info">18 South Park, London </a>
                 </div>
             </div>
             <div class="footer_picture">
-                <img src="./images/footer_dog.png">
+                <img src="./images/footer-puppy.png" alt="picture">
             </div>
         </div>
     </footer>
