--- a/shelter/main_1280.html
+++ b/shelter/main_1280.html
@@ -153,7 +153,7 @@
     <footer>
         <div id="contacts" class="footer_content">
             <div class="footer_contacts">
-                <h3 class="footer_heading">For questions and suggestions</h3>
+                <h3 class="footer_heading">For questions <br>and suggestions</h3>
                 <div class="footer_string">
                     <a href="https://www.google.com/intl/ru/gmail/about/">
                         <img src="./images/icon-email.png" alt="picture">
@@ -168,7 +168,7 @@
                 </div>
             </div>
             <div style="width: 302px;" class="footer_contacts">
-                <h3 class="footer_heading">We are waiting for your visit</h3>
+                <h3 class="footer_heading">We are waiting <br>for your visit</h3>
                 <div class="footer_string">
                     <a href="https://www.google.com/maps/@53.9532339,27.4091284,15z?entry=ttu" target="_blank">
                         <img src="./images/pin.png" alt="picture">
